extend User model to be Account

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -16,7 +16,7 @@
     "User": {
         "dataSource": "mongodb_dev"
     },
-    "user": {
+    "Account": {
         "dataSource": "mongodb_dev",
         "public": "true"
     },
